k8s/ingress/ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: tracking.lupuslucis.fvds.ru
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: mlflow-svc
            port:
              number: 5000
  - host: s3.lupuslucis.fvds.ru
    http:
        paths:
        - path: "/"
          pathType: Prefix
          backend:
            service:
              name: minio-ui-svc
              port:
                number: 9090
  - host: api.lupuslucis.fvds.ru
    http:
        paths:
        - path: "/"
          pathType: Prefix
          backend:
            service:
              name: api-svc
              port:
                number: 8000
  - host: express.lupuslucis.fvds.ru
    http:
        paths:
        - path: "/"
          pathType: Prefix
          backend:
            service:
              name: mongo-express-svc
              port:
                number: 8081
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: tekton-pipelines
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: pipelines.lupuslucis.fvds.ru
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: tekton-dashboard
            port:
              number: 9097
